--- a/resume2.tex
+++ b/resume2.tex
@@ -84,7 +84,7 @@
     \begin{minipage}{1.16\maincolumnwidth}%
       \small#4%
     \end{minipage}}\fi%
-  \par\addvspace{#1}}
+  \par\addvspace{#1}}%
 
 \setlength{\tabcolsep}{11pt}
 
@@ -95,7 +95,7 @@
 %\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
-\vspace*{-22mm}
+\vspace*{-21mm}
 
 \begin{center}
 \begin{tabular}{c c c c}
@@ -103,44 +103,39 @@
 \end{tabular}
 \end{center}
 
+\vspace*{-5mm}
+
 \section{  {\large {EDUCATION}}}
+\vspace*{-1.5mm}
 {\customcventry{2018}{B.Tech(Mechanical Engineering) \hspace{0.5cm} \textup{CPI: 7/10}}{\small{Indian Institute of Technology Kanpur}}{\small{Kanpur, Uttar Pradesh}}{}{}}
 
-
-
-{\customcventry{ 2014}{Intermediate(CBSE)     \hspace{0.5cm}\textup{Percentage: 93.2}}{\small {K.D.B. Public School}}{\small{Ghaziabad, Uttar Pradesh}}{}{\normalsize{\textit{High School(CBSE)  } \hspace{0.6cm}CGPA: 9.6/10} \hspace{10.4cm} {\normalsize{\textit{2012} }}  }
-}
+{\customcventry{ 2014}{Intermediate(CBSE)     \hspace{0.5cm}\textup{Percentage: 93.2}}{\small {K.D.B. Public School}}{\small{Ghaziabad, Uttar Pradesh}}{}{\normalsize{\textit{High School(CBSE)  } \hspace{0.6cm}CGPA: 9.6/10} \hspace{10.4cm} {\normalsize{\textit{2012}}}}}
 \section{ \large{CERTIFICATIONS}}
-
-{\customcventry{Dec 2018}{5-course specialization by deeplearning.ai}{\small{Deep Learning Specialization} }{\small{Coursera}}{}
+\vspace*{-1.5mm}
+{\customcvproject{\small{Deep Learning Specialization \textit{(5-course specialization by deeplearning.ai)}} }{\small{\textbf{Coursera} - Dec 2018}}{}
 {\begin{itemize}
   \textbullet { Neural Networks and Deep Learning} \hspace{2.5cm}  \textbullet{ Structuring Machine Learning Projects} \\
-  \textbullet { Convolutional Neural Networks} \hspace{3.3cm}
+  \textbullet { Convolutional Neural Networks} \hspace{3.37cm}
   \textbullet { Sequence Models} \\
   \textbullet { Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization}
 \end{itemize}
 }
 
-{\customcventry{Aug 2018}{Stanford University}{\small{Machine Learning}}{\small{Coursera}}{}
+{\customcvproject{\small{Machine Learning \textit{(Stanford University)} }}{\small{\textbf{Coursera} - Aug 2018}}{}
 {}
 
 
-{\customcventry{Oct 2018}{University of Pennsylvania}{\small{Robotics: Perception}}{\small{Coursera}}{}
+{\customcvproject{\small{Robotics: Perception \textit{(University of Pennsylvania)}}}{\small{\textbf {Coursera} - Oct 2018}}{}
 {}
 
-
-
-
-
-
-
-
+\vspace*{3mm}
 \section{\large{ACHIEVEMENTS}}
+
 \begin{minipage}{1.15\maincolumnwidth}%
 	\small{
     	\begin{itemize}
           \item Secured a spot in top-8 teams in the final round of Axis Bank AI Hackathon 2018 from 3105 teams registered
-          \item Awarded ‘The Proficiency Medal’ at 51st convocation by Shri R.C. Bhargava (Chairman, Board of Governors, IIT Kanpur) for best undergraduate project work done by graduating students in the 4-year/5-year UG-programme for the year 2018
+          \item Awarded ‘The Proficiency Medal’ at 51st convocation by Shri R.C. Bhargava (Chairman, IIT Kanpur) for best undergraduate project work done by graduating students in the 4-year/5-year UG-programme for the year 2018
           \item Awarded 'Full-Fee Waiver Scholarship' for period 2012-2014 by K.D.B. Public School based on High-School merit
           \end{itemize}}%
 \end{minipage}%
@@ -148,7 +143,7 @@
 
 
 \section{\large{EXPERIENCE}}
-
+\vspace*{-1.5mm}
 {\customcventry{June - Sep 2018}{Graduate Engineer Trainee}{\small{Amway India Manufacturing Plant}}{\small{Dindigul, Tamil Nadu}}{}
 {\begin{itemize}
   \item Improvement, Maintenance \& Operation of plant Utilities, Manpower Management, Team Building
@@ -167,22 +162,19 @@
 
 
 \section{\large{RELEVANT PROJECTS}}
-
+\vspace*{-1.5mm}
 
 {\customcvproject{\small{Face Recognition Application}}{Dec 2018 (ongoing)}
 {\begin{itemize}
-  \item Developed a face recognition algorithm based on 2D-PCA giving 77\% accuracy on AR database
-  \item Designed an Apache Web Server to run the all required cgi-python scripts and uploaded our own database for face recognition
-  \item Developed a Unity based Windows platform application as user interface and synced it with the local server\\  \\  
+  \item Developed a face recognition algorithm based on 2D-PCA giving 77\% accuracy on Cambridge University database
+  \item Built an Unity based Windows application which is used as an user interface for real time detection   
 \end{itemize}
 }
 
 
 { \customcvproject{\small{Table Reading \& Understanding in Documents/Images}}{Oct - Dec 2018}
 {\begin{itemize}
-    \item Developed an unsupervised learning model which defines the physical and logical structure of tables
-    \item The input to the model are PDF/DOC/IMAGE files and output is an excel file corresponding to each input file containing all the tables detected from the input files
-    \item Built a user-interface by creating a local WordPress site using XAMPP to run all required cgi-python scripts
+    \item Developed an unsupervised learning model which  detects \& extracts tabular data from documents to an excel file 
     \item Achieved 90\% accuracy on table detection and 70\% accuracy while table extraction 
   \end{itemize}
 }
@@ -191,7 +183,7 @@
 
 
 
-{\customcvproject{\small{Line Following Maze Solving Robot |Robotics Club}}{May – July 2015}
+{\customcvproject{\small{Line Following Maze Solving Robot |Robotics Club}}{May - July 2015}
 {\begin{itemize}
   \item Built a robot which detected the path via Infrared Sensor Array and used PID controller for smooth maneuvering 
   \item Used Left Straight Right (LSR) algorithm to trace the maze and to solve it via shortest path
@@ -201,74 +193,22 @@
 
 
 \section{\large{TECHNICAL SKILLS}}
+\vspace*{-1.5mm}
 \begin{minipage}{1.15\maincolumnwidth}%
 	\small{
     	\begin{itemize}
-          \item \textbf{Relevant Coursework:}\\   \textbullet{}Advanced Calculus\hspace{0.4cm}  \textbullet{}Linear Algebra \& ODEs\hspace{0.4cm}  \textbullet{}Complex Variables\hspace{0.4cm} \textbullet{}Partial Differential Equations \hspace{0.8cm}\textbullet{}Robot Manipulators:Dynamics \& Control\hspace{1cm} \textbullet{}Vibration \& Control\hspace{1cm} \textbullet{}Speech Signal Processing \\ \textbullet{}Fundamental of Computing 
-          \item \textbf{Tools:}\\ \textbullet{}Python\hspace{0.3cm} 
-          \textbullet{}C\hspace{0.3cm} \textbullet{}MATLAB\hspace{0.3cm} \textbullet{}HTML/CSS\hspace{0.3cm} \textbullet{}Javascript\hspace{0.3cm} \textbullet{}\LaTeX\ \hspace{0.3cm}
-          \textbullet{}Arduino\hspace{0.3cm}
-          \textbullet{}SolidWorks\hspace{0.3cm}
-          \textbullet{}Unity
+          \item \textbf{Relevant Coursework:}\\   \textbullet{}Advanced Calculus\hspace{0.6cm}  \textbullet{}Linear Algebra \& ODEs\hspace{0.6cm}  \textbullet{}Complex Variables\hspace{0.6cm} \textbullet{}Partial Differential Equations \hspace{0.8cm}\textbullet{}Robot Manipulators\hspace{0.4cm} \textbullet{}Speech Signal Processing\hspace{0.55cm}\textbullet{}Vibration \& Control \hspace{0.2cm} \textbullet{}Fundamental of Computing 
+          \item \textbf{Tools:}\\ \textbullet{}Python\hspace{2.4cm} 
+          \textbullet{}C\hspace{4.0cm} 
+          \textbullet{}MATLAB\hspace{1.95cm}
+          \textbullet{}Unity\\
+          \textbullet{}HTML/CSS\hspace{1.65cm} \textbullet{}Javascript\hspace{2.7cm} \textbullet{}\LaTeX\ \hspace{2.5cm}
+          \textbullet{}Arduino
+
+          
 		\end{itemize}}%
 \end{minipage}%
 
-
-\section{\large{OTHER PROJECTS}}
-\begin{minipage}{1.16\maincolumnwidth}%
-	\small{
-    	\begin{itemize}
-          \item \textbf{Manufacturing \& Designing:} \\    \textbullet{}Missile Launching Truck Model Prototype \begin{footnotesize}(Course Project – Manufacturing Processes I)  \hspace{1.8cm}  \textit{Aug – Nov 2015}\end{footnotesize}
-          
-          \textbullet{}Vulcan Gun Model Prototype \begin{footnotesize}{(Course Project – Manufacturing Processes II)}\hspace{3.5cm}  \textit{{Feb – Apr 2016}}\end{footnotesize}
-          
-          \textbullet{}Portable Cloth Dryer \begin{footnotesize}{(Course Project – New Product Design and Prototyping)} \hspace{3.4cm}  \textit{\footnotesize{Jan – Apr 2017}}\end{footnotesize}
-          
-          \textbullet{}The Elbow Engine \begin{footnotesize}{( B.Tech Undergraduate Project)}\hspace{6.2cm} \textit{\footnotesize{Aug 2017 – May 2018}}\end{footnotesize}
-    
-          \item \textbf{Designing :}\\
-          \textbullet{}Mechanical Wrist Watch Designing \begin{footnotesize}(Course Project - Engineering Graphics) 
-           \hspace{3.4cm} \textit{{Oct – Nov 2015}}\end{footnotesize}
-          
-          \textbullet{}Electric Vehicle Designing\begin{footnotesize} (Mentor: Prof. Ramprasad Potluri, Electrical Engineering Dept.,IITK)\hspace{0.6cm} \textit{\footnotesize{May – Jul 2016}}\end{footnotesize} 
-          
-          \textbullet{}Elevator System Designing \begin{footnotesize}(Course Project – Design of Machine Elements)\hspace{3.9cm} \textit{\footnotesize{Mar – Apr 2017}}\end{footnotesize}
-          
-           
-           
-           
-           \item \textbf{Encoding HOA with ACC} \begin{footnotesize}(Course Project - Speech Signal Processing)\hspace{4.2cm} \textit{Jan – Apr 2018}\end{footnotesize}\\
-           \textbullet Performed ambisonic encoding/decoding i.e. conversion between A-format, B-format and D-format signals
-		\end{itemize}}%
-\end{minipage}%
-
-
-\section{\large{EXTRA CURRICULAR ACTIVITIES}}
-\begin{minipage}{1.16\maincolumnwidth}%
-	\small{
-    	\begin{itemize}
-          \item \textbf{Assistant Manager, Robogames, Techkriti’16:} Organized and co-ordinated Zonals, National and International rounds with around 60, 40 and 5 participant teams respectively
-          \item \textbf {Secretary, Robogames, Techkriti’15:} Conducted the event International Autonomous Robotics Challenge (IARC) and managed around 50 participating teams
-          \item \textbf{Marketing Team (IITK Motor Sports, Society of Automotive Engineers):} Established an extensive database of companies and persuaded them for sponsorship and raised up to 6 lakhs worth
-          \item \textbf{Won Fine Arts Trophy in Galaxy’15} 
-               \begin{itemize} {Won 1st position for:}\hspace{0.4cm}
-              \textbullet Backdrop art drawing\hspace{0.4cm} 
-              \textbullet Hall Parade\hspace{0.4cm}                
-              \textbullet Street Art\hspace{0.4cm} 
-              \textbullet Merge It All event \\
-          Won 2nd position for making speed art event 
-           \end{itemize} 
-        \item \textbf{Constructed a remote controlled robot and air-plane: } Participated in Robotrix in Takneek'14 
-        
-        \item \textbf{Awarded certification by Science Olympiad Foundation for distinctive performance}: \\ \textbullet National Science Olympiad \hspace{0.7cm}\textbullet National Cyber Olympiad \hspace{0.7cm}\textbullet International Mathematics Olympiad
-        \item Participated in Marathon conducted by K.D.B. Public School for awareness to protect Heritage and Health 
-        \item Participated in Marathon organized by 50th Inter IIT Sports Meet for raising funds for Smile Foundation
-        \item Played Squash as a part of physical activity course (CPA) during 1st year
-        \item	Participated in the various sports event like wall climbing, volleyball, lawn tennis, badminton, carom, chess etc. in Josh’15
-
-        
-		\end{itemize}}%
-\end{minipage}%
       
 }
 
