Updates from ShareLaTeX

--- a/resume3.tex
+++ b/resume3.tex
@@ -95,7 +95,7 @@
 %\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
-\vspace*{-21mm}
+\vspace*{-21.4mm}
 
 \begin{center}
 \begin{tabular}{c c c c}
@@ -110,6 +110,8 @@
 {\customcventry{2018}{B.Tech(Mechanical Engineering) \hspace{0.5cm} \textup{CPI: 7/10}}{\small{Indian Institute of Technology Kanpur}}{\small{Kanpur, Uttar Pradesh}}{}{}}
 
 {\customcventry{ 2014}{Intermediate(CBSE)     \hspace{0.5cm}\textup{Percentage: 93.2}}{\small {K.D.B. Public School}}{\small{Ghaziabad, Uttar Pradesh}}{}{\normalsize{\textit{High School(CBSE)  } \hspace{0.6cm}CGPA: 9.6/10} \hspace{10.45cm} {\normalsize{\textit{2012}}}}}
+
+
 \section{ \large{CERTIFICATIONS}}
 \vspace*{-1.5mm}
 {\customcvproject{\small{Deep Learning Specialization \textit{(5-course specialization by deeplearning.ai)}} }{\small{\textbf{Coursera} - Dec 2018}}{}
@@ -127,17 +129,21 @@
 {}
 
 \vspace*{-1.25mm}
-\section{\large{ACHIEVEMENTS}}
-\vspace*{-1.25mm}
+\section{\large{TECHNICAL SKILLS}}
+\vspace*{-1.5mm}
 \begin{minipage}{1.15\maincolumnwidth}%
 	\small{
     	\begin{itemize}
-          \item Secured a spot in top-8 teams in the final round of Axis Bank AI Hackathon 2018
-          \item Received ‘The Proficiency Medal’ at 51st convocation by for best undergraduate project work done by graduating students in the 4-year/5-year UG-programme for the year 2018
-          \item Received 'Full-Fee Waiver Scholarship' for period 2012-2014 by K.D.B. Public School based on High-School merit
-          \end{itemize}}%
+          \item \textbf{Relevant Coursework:}\\   \textbullet{}Advanced Calculus\hspace{0.6cm}  \textbullet{}Linear Algebra \& ODEs\hspace{0.6cm}  \textbullet{}Complex Variables\hspace{0.6cm} \textbullet{}Partial Differential Equations \hspace{0.8cm}\textbullet{}Robot Manipulators\hspace{0.4cm} \textbullet{}Speech Signal Processing\hspace{0.55cm}\textbullet{}Vibration \& Control \hspace{0.2cm} \textbullet{}Fundamental of Computing 
+          \item \textbf{Programming Languages \& Tools:}\\ \textbullet{}Python\hspace{2.4cm} 
+          \textbullet{}C\hspace{4.0cm} 
+          \textbullet{}MATLAB\hspace{1.95cm}
+          \textbullet{}Unity\\
+          \textbullet{}HTML/CSS\hspace{1.65cm} \textbullet{}JavaScript\hspace{2.7cm} \textbullet{}\LaTeX\ \hspace{2.5cm}
+          \textbullet{}Arduino
+		\end{itemize}}%
 \end{minipage}%
-      
+
 
 
 \section{\large{EXPERIENCE}}
@@ -166,7 +172,7 @@
 {\customcvproject{\small{Face Recognition Application}}{Dec 2018 (ongoing)}
 {\begin{itemize}
   \item Developed a face recognition algorithm based on 2D-PCA giving 77\% accuracy on Cambridge University database
-  \item Built an unity based Windows application which is used as an user interface for real time detection   
+  \item Built an unity based Windows application for real time face recognition  
 \end{itemize}
 }
 
@@ -191,7 +197,16 @@
 }
 
 
-
+\section{\large{ACHIEVEMENTS}}
+\vspace*{-1.5mm}
+\begin{minipage}{1.15\maincolumnwidth}%
+	\small{
+    	\begin{itemize}
+          \item Secured a spot in top-8 teams in the final round of Axis Bank AI Hackathon 2018
+          \item Received ‘The Proficiency Medal’ at 51st convocation for best undergraduate project work done by graduating students in the 4-year/5-year UG-programme for the year 2018
+          \item Received ‘Full-Fee Waiver Scholarship’ for period 2012-2014 by K.D.B. Public School based on high-school merit
+          \end{itemize}}%
+\end{minipage}%
 
       
 }
